--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <span><a href="signin.html">Sign In</a></span>
             <div id="content"></div>
             <input type="button" value="Sign Out" id="signOutBtn" hidden>
+            <span><a href="php/admin.php">Admin page</a></span>
         </header>
         <img id="logo_img" src="images/Skylanders_Logo.webp"/>
         <nav>
@@ -25,7 +26,6 @@
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="merch.html">Merchandise</a></li>
                 <li><a href="checkouts.html">Checkouts</a></li>
-                <li><a href="accountCreate.html">Account Creation</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
