--- a/signin.html
+++ b/signin.html
@@ -13,5 +13,6 @@
         <label>Password: <input type="password" name="password"></label>
         <input type="submit">
     </form>
+    <span><a href="index.html">Go Back to Home Page</a></span>
 </body>
 </html>
