--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link href="css/style.css" rel="stylesheet">
-            <link href="css/index.css" rel="stylesheet">
         <title>Skylanders | Home</title>
     </head>
 
@@ -25,7 +24,7 @@
             <ul class="nav_menu">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="merch.html">Merchandise</a></li>
-                <li><a href="checkouts.html">Checkouts</a></li>
+                <li><a href="checkouts.php">Checkouts</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
