--- a/merch.html
+++ b/merch.html
@@ -25,7 +25,7 @@
 			<ul class="nav_menu">
 				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="merch.html">Merchandise</a></li>
-				<li><a href="checkouts.html">Checkouts</a></li>
+				<li><a href="checkouts.php">Checkouts</a></li>
 				<li><a href="about.html">About</a></li>
 			</ul>
 		</nav>
