--- a/signup.html
+++ b/signup.html
@@ -15,6 +15,6 @@
         <label>Password: <input type="password" name="password"></label>
         <input type="submit" value="Submit"><input type="reset">
     </form>
-    
+    <span><a href="index.html">Go Back to Home Page</a></span>
 </body>
 </html>
