--- a/merch.html
+++ b/merch.html
@@ -13,10 +13,11 @@
 	<body>
 
 		<header>
-			<span><a href="signup.html">Sign Up</a></span>
-			<span><a href="signin.html">Sign In</a></span>
+			<span id="signUpLink"><a href="signup.html">Sign Up</a></span>
+            <span id="signInLink"><a href="signin.html">Sign In</a></span>
 			<div id="content"></div>
 			<input type="button" value="Sign Out" id="signOutBtn" hidden>
+			<span id="adminPageLink"><a href="php/admin.php">Admin page</a></span>
 		</header>
 	
         <img id="logo_img" src="images/Skylanders_Logo.webp"/>
