should be done now

--- a/signin.html
+++ b/signin.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <form method="post" action="php/signin.php">
+        <label><strong>Sign In</strong></label>
         <label>Username: <input type="text" name="username"></label>
         <label>Password: <input type="password" name="password"></label>
         <input type="submit">
     </form>
-    <span><a href="index.html">Go Back to Home Page</a></span>
 </body>
 </html>
