--- a/signup.html
+++ b/signup.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <form method="post" action="php/signup.php">
+        <label><strong>Sign Up</strong></label>
         <label>First Name: <input type="text" name="firstname"></label>
         <label>Last Name: <input type="text" name="lastname"></label>
         <label>Username: <input type="text" name="username"></label>
         <label>Password: <input type="password" name="password"></label>
         <input type="submit" value="Submit"><input type="reset">
     </form>
-    <span><a href="index.html">Go Back to Home Page</a></span>
 </body>
 </html>
